--- a/squid.conf
+++ b/squid.conf
@@ -3,6 +3,11 @@ acl localhost src 127.0.0.1/32 ::1
 acl to_localhost dst 127.0.0.0/8 0.0.0.0/32 ::1
 acl localnet src 192.168.56.0/24
 
+auth_param basic program /usr/lib/squid3/ncsa_auth /etc/squid3/passwd
+auth_param basic children 9
+auth_param basic realm Serwer squid
+auth_param basic credentialsttl 2 hours
+
 acl SSL_ports port 443
 acl Safe_ports port 80		# http
 acl Safe_ports port 21		# ftp
@@ -15,6 +20,52 @@ acl Safe_ports port 488		# gss-http
 acl Safe_ports port 591		# filemaker
 acl Safe_ports port 777		# multiling http
 acl CONNECT method CONNECT
+
+#adresy oraz definicje userow
+acl boss arp 08:00:27:84:24:BF 08:00:27:81:08:73
+acl managers arp 08:00:27:E7:D5:37 08:00:27:82:59:C5 08:00:27:C3:BE:B8
+acl programmers_and_projectants src 192.168.2.0/24
+acl administrator arp 08:00:27:EB:D7:94
+acl assistant_and_accountant src 192.168.3.0/24
+acl programmers proxy_auth "/etc/squid3/programmers.acl" REQUIRED
+acl projectants proxy_auth "/etc/squid3/projectants.acl" REQUIRED
+
+#definicje ograniczen
+acl entertainment dstdom_regex "/etc/squid3/entertainment.acl"
+acl files urlpath_regex "/etc/squid3/files.acl"
+acl wupdate dstdomain update.microsoft.com
+acl portals dstdom_regex "/etc/squid3/portals.acl"
+acl office_files urlpath_regex "/etc/squid3/office_files.acl"
+acl working_hours time M T W H F 8:00-16:00
+acl weekend time S A 0:00-23:59
+
+#ograniczenia
+#boss
+http_access allow boss
+
+#managers
+http_access deny managers working_hours weekend entertainment
+http_access allow managers
+
+#programmers and projectants
+http_access deny programmers_and_projectants entertainment
+
+#projectants
+http_access deny projectants files !wupdate
+http_access allow programmers_and_projectants projectants
+
+#programmers
+http_access deny programmers working_hours portals
+http_access allow programmers_and_projectants programmers
+
+#administrator
+http_access deny administrator !working_hours entertainment
+http_access allow administrator
+
+#assistant and accountant
+http_access deny assistant_and_accountant working_hours entertainment
+http_access deny assistant_and_accountant !office_files
+http_access allow assistant_and_accountant
 
 http_access allow manager localhost
 http_access deny manager
